appId: click.helpamunch.mobileapp
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      text: "screenshot-open-rooms"
    timeout: 15000
- tapOn:
    text: "screenshot-open-rooms"
- extendedWaitUntil:
    visible:
      id: "screenshot-open-room-join"
    timeout: 15000
